--- a/app/src/main/res/navigation/main_activity_nav.xml
+++ b/app/src/main/res/navigation/main_activity_nav.xml
@@ -15,6 +15,9 @@
             app:destination="@id/detayFragment"
             app:popUpTo="@id/anasayfaFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/bottomSheetGecis"
+            app:destination="@id/bottomSheetFragment" />
     </fragment>
     <fragment
         android:id="@+id/detayFragment"
@@ -41,4 +44,14 @@
             android:name="urun"
             app:argType="com.example.navigationcomponentkullanimi.Urunler" />
     </fragment>
+    <fragment
+        android:id="@+id/ayarlarFragment"
+        android:name="com.example.navigationcomponentkullanimi.AyarlarFragment"
+        android:label="fragment_ayarlar"
+        tools:layout="@layout/fragment_ayarlar" />
+    <dialog
+        android:id="@+id/bottomSheetFragment"
+        android:name="com.example.navigationcomponentkullanimi.BottomSheetFragment"
+        android:label="fragment_bottom_sheet"
+        tools:layout="@layout/fragment_bottom_sheet" />
 </navigation>
